# schedulize

./: README.md  pyproject.toml
src/schedulize/: main.py
