[project]
name = "schedulize"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrii Tverdyi",email = "andrii.tv@proton.me"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
